# energy-cache-compression

./: .gitmodules  CMakeLists.txt  README.md  cli.hpp  patterns.7z  sorting.cpp  sorting.py  testing_algorithms.cpp  texts.7z
.devcontainer/: devcontainer.json
measurements/cache_efficiency/: cache_efficiency.yaml
measurements/compressed_text_indices_einstein_8/: compressed_text_indices_einstein_8.yaml
measurements/compressed_text_indices_einstein_8/0/: results.csv  statistics.csv
measurements/compressed_text_indices_einstein_8/1/: results.csv  statistics.csv
measurements/compressed_text_indices_einstein_8/2/: results.csv  statistics.csv
measurements/compressed_text_indices_einstein_construct/: compressed_text_indices_einstein_construct.yaml
measurements/compressed_text_indices_einstein_construct/0/: results.csv  statistics.csv
measurements/compressed_text_indices_einstein_construct/1/: results.csv  statistics.csv
measurements/compressed_text_indices_einstein_construct/2/: results.csv  statistics.csv
python_algorithms/: insertion_sort.py  selection_sort.py
webapp/: EnergyEfficientAlgorithms.py  Home.py  requirements.txt
webapp/energy_efficient_algorithms/: compression_emissions.py
webapp/pages/: 1_Cache_Misses_are_Energy_Efficient.py  2_Compressed_Text_Indices.py  3_Emissions_and_Compression.py  4_Emission_Calculator_for_Compression.py
webapp/shared/: common_text.py  references.py  streamlit_utils.py
webapp/static/: references.bib
